[package]
name = "stm32l4-sd-example"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy" , rev = "141c170db426404444a454c063c2eec07c74a1c3", features = ["arch-cortex-m", "executor-thread"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy" , rev = "141c170db426404444a454c063c2eec07c74a1c3", features = ["stm32l433rc", "time-driver-any","memory-x", "exti", "unstable-pac"]  }


defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[features]
defmt = []

[profile.release]
debug = 2

[profile.dev]
debug = 2